@@ -3,7 +3,7 @@
 (defvar nethack-accelerator-chars
   [?a ?b ?c ?d ?e ?f ?g ?h ?i ?j ?k ?l ?m ?n ?o ?p ?q ?r ?s ?t ?u ?v
 ?w ?x ?y ?z ?A ?B ?C ?D ?E ?F ?G ?H ?I ?J ?K ?L ?M ?N ?O ?P ?Q ?R ?S
-?T ?U ?V ?W ?X ?Y ?Z]
+?T ?U ?V ?W ?X ?Y ?Z ?*]
   "Vector of accelerator characters.")
 
 ;; from src/options.c:
